fixed grid row bug on safari and chrome ios

--- a/resources/assets/styles/components/_announcements.scss
+++ b/resources/assets/styles/components/_announcements.scss
@@ -1,6 +1,7 @@
 .c-announcements {
   @include media-query($lg-mobile) {
     grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: ms(4);
     row-gap: ms(4);
 
     @include grid-row(ms(6));
