--- a/resources/assets/styles/helpers/_mixins.scss
+++ b/resources/assets/styles/helpers/_mixins.scss
@@ -140,6 +140,7 @@
 
 @mixin grid-row($gap: ms(2)) {
   display: grid;
+  grid-column-gap: $gap;
   column-gap: $gap;
 }
 
