--- a/resources/assets/styles/helpers/_wp-classes.scss
+++ b/resources/assets/styles/helpers/_wp-classes.scss
@@ -57,6 +57,7 @@ $spacer: ms(2);
 .gallery {
   margin: $spacer 0;
   grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: ms(2);
   row-gap: ms(2);
 
   @include grid-row;
